chore: Change compliance to Java 11 (#76)